# kaspi-service

./: .gitignore  Cargo.toml  README.md
src/: json_processing.rs  lib.rs  main.rs  store.rs
src/entities/: attribute.rs  category.rs  mod.rs  product.rs  upload_result.rs
src/routes/: code.rs  mod.rs  products.rs
