[package]
name = "kaspi-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
json = "0.12.4"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
actix-web = "4.1.0"
dotenv = "0.15.0"
kaspi-rs = { git = "https://github.com/Wooker/kaspi-rs", branch = "main" }
env_logger = "0.9.0"
